--- a/dangerzone/website/tradecraft.html
+++ b/dangerzone/website/tradecraft.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta charset="UTF-8">
    <title>Danger Zone</title>
    <link rel="icon" href="icon.svg" type="image/x-icon">
    <link href="style.css" type="text/css" rel="stylesheet">
