fixed hidden character issue

--- a/dangerzone/website/characters.html
+++ b/dangerzone/website/characters.html
@@ -9,7 +9,7 @@
 <body>
    <section>
       <h1 id="title">Characters</h1>
-      <p>"Something something DANGER ZONE!" --Sterling Archer</p>
+      <p>"Something something DANGER ZONE!" -- Sterling Archer</p>
    </section>
    <div id="navbar_section">
       <ul id="navbar">
@@ -24,53 +24,53 @@
       <tr class="character_row">
 	 <td class="character_entry">
             <img class="characterimg" src="images/archer.jpeg" alt="">
-	    <p class="description">"Buddy you just sold a timeshare! Make that two timeshares!" --Sterling Archer</p>
+	    <p class="description">"Buddy you just sold a timeshare! Make that two timeshares!" -- Sterling Archer</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/lana.jpeg" alt="">
-	    <p class="description">"YUP!" --Lana Kane</p>
+	    <p class="description">"YUP!" -- Lana Kane</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/malory.jpeg" alt="">
-	    <p class="description">"Immigrants! That's how they do, you know. Just drive around listening to raps and shooting all the jobs." --Malory Archer</p>
+	    <p class="description">"Immigrants! That's how they do, you know. Just drive around listening to raps and shooting all the jobs." -- Malory Archer</p>
 	 </td>
       </tr>
       <tr class="character_row">
 	 <td class="character_entry">
             <img class="characterimg" src="images/cyril.jpeg" alt="">
-	    <p class="description">"Just jacking it…" --Cyril Figgis</p>
+	    <p class="description">"Just jacking it..." -- Cyril Figgis</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/pam.jpeg" alt="">
-	    <p class="description">“What, What!” --Pam Poovey</p>
+	    <p class="description">"What, What!" -- Pam Poovey</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/cheryl.jpeg" alt="">
-	    <p class="description">"You're not my supervisor!" --Cheryl Tunt</p>
+	    <p class="description">"You're not my supervisor!" -- Cheryl Tunt</p>
 	 </td>
       </tr>
       <tr class="character_row">
 	 <td class="character_entry">
             <img class="characterimg" src="images/ray.jpeg" alt="">
-	    <p class="description">“Imma write a book about this place. Mmhmm, a real smack-a-rooney” --Ray Gillete</p>
+	    <p class="description">"Imma write a book about this place. Mmhmm, a real smack-a-rooney" -- Ray Gillete</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/woodhouse.jpeg" alt="">
-	    <p class="description">"Back in a jiff!" --Woodhouse</p>
+	    <p class="description">"Back in a jiff!" -- Woodhouse</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/kreiger.jpeg" alt="">
-	    <p class="description">“I’m Not A… Serial Killer.” --Dr. Drieger</p>
+	    <p class="description">"I'm Not A... Serial Killer." -- Dr. Krieger</p>
 	 </td>
       </tr>
       <tr class="character_row">
 	 <td class="character_entry">
             <img class="characterimg" src="images/barry.jpeg" alt="">
-	    <p class="description">"Is that how you get ants? Yes it is other Barry. yes it is." --Barry Dylan</p>
+	    <p class="description">"Is that how you get ants? Yes it is other Barry. Yes it is." -- Barry Dylan</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/katya.jpeg" alt="">
-	    <p class="description">"Bozhe moi!" --Katya Kazanova</p>
+	    <p class="description">"Bozhe moi!" -- Katya Kazanova</p>
 	 </td>
 	 <td class="character_entry">
             <img class="characterimg" src="images/mr_robot.jpg" alt="">
